Minor modifications i.a., to application.context, that doesn't work yet. Have to fix that in the coming days

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,6 @@
 logging.level.net.spikesync=DEBUG
 #logging.level.org.springframework.boot.autoconfigure=INFO
 #spring.main.lazy-initialization=FALSE
-
 #Test for the existence of the SilverCloud bean in the top-class DevPingApplication through Autowiring.
-#test-silvercloud-scnodes=TRUE
+test-silvercloud-scnodes=FALSE
 
