--- a/src/main/resources/simplelogger.properties
+++ b/src/main/resources/simplelogger.properties
@@ -13,7 +13,7 @@
         <Root level="debug">
             <AppenderRef ref="Console"/>
         </Root>
-        <Logger name="org.springframework" level="error">
+        <Logger name="org.springframework" level="debug">
             <AppenderRef ref="Console"/>
         </Logger>
     </Loggers>
