--- a/src/main/resources/nospringboot.application.properties
+++ b/src/main/resources/nospringboot.application.properties
@@ -2,5 +2,11 @@
 #logging.level.org.springframework.boot.autoconfigure=INFO
 #spring.main.lazy-initialization=FALSE
 #Test for the existence of the SilverCloud bean in the top-class DevPingApplication through Autowiring.
-test-pingerdaemon-context=false
+test-pingerdaemon-context=TRUE
+logging.level.root=DEBUG
+logging.level.org.springframework=DEBUG
+logging.level.org.springframework.context=DEBUG
+loggin.level.net.spikesync=DEBUG
+fileName=logback.xml
+
 
