--- a/pom.xml
+++ b/pom.xml
@@ -1,285 +1,127 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+<!-- POM WITH/INCLUDING org.springframework.boot parent element!! Spring Boot INCLUDED!! -->
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>3.1.4</version>
+		<relativePath /> <!-- lookup parent from repository -->
+	</parent>
+	<groupId>net.spikesync</groupId>
+	<artifactId>pingerdaemon-rabbitmq-client</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>pingerdaeomon-rabbitmq-client</name>
+	<description>VM SilverCloud pinger with RabbitMQ CLient</description>
+	<properties>
+		<java.version>17</java.version>
+	</properties>
+	<dependencies>
 
-<profiles>
-	<profile>
-		<id>spring-boot-parent</id>
-		<!-- POM WITH/INCLUDING org.springframework.boot parent element!! Spring 
-			Boot INCLUDED!! -->
-
-		<project xmlns="http://maven.apache.org/POM/4.0.0"
-			xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-			xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-			<modelVersion>4.0.0</modelVersion>
-			<parent>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-starter-parent</artifactId>
-				<version>3.1.4</version>
-				<relativePath /> <!-- lookup parent from repository -->
-			</parent>
-			<groupId>net.spikesync</groupId>
-			<artifactId>pingerdaemon-rabbitmq-client</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-			<name>pingerdaeomon-rabbitmq-client</name>
-			<description>VM SilverCloud pinger with RabbitMQ CLient</description>
-			<properties>
-				<java.version>17</java.version>
-			</properties>
-			<dependencies>
-
-				<!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
-				<dependency>
-					<groupId>org.springframework</groupId>
-					<artifactId>spring-context</artifactId>
-					<version>6.0.12</version>
-				</dependency>
+		<!--
+		https://mvnrepository.com/artifact/org.springframework/spring-context -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>6.0.12</version>
+		</dependency>
 
 
-				<!-- Hieronder staan DRIE dependencies die ALLEMAAL nodig zijn om een 
-					verbinding te maken met een RabbitMQ server -->
-				<dependency>
-					<groupId>com.rabbitmq</groupId>
-					<artifactId>amqp-client</artifactId>
-					<version>5.17.1</version>
-				</dependency>
+		<!-- Hieronder staan DRIE dependencies die ALLEMAAL nodig zijn om een
+		verbinding te maken met een RabbitMQ server -->
+		<dependency>
+			<groupId>com.rabbitmq</groupId>
+			<artifactId>amqp-client</artifactId>
+			<version>5.17.1</version>
+		</dependency>
 
-				<dependency>
-					<groupId>org.springframework.amqp</groupId>
-					<artifactId>spring-rabbit</artifactId>
-					<version>3.0.9</version>
-				</dependency>
+		<dependency>
+			<groupId>org.springframework.amqp</groupId>
+			<artifactId>spring-rabbit</artifactId>
+			<version>3.0.9</version>
+		</dependency>
 
-				<dependency>
-					<groupId>org.springframework.boot</groupId>
-					<artifactId>spring-boot-starter-amqp</artifactId>
-					<version>3.1.4</version>
-				</dependency>
-
-
-				<!-- Add SLF4J logger https://www.baeldung.com/slf4j-with-log4j2-logback 
-					See also: https://howtodoinjava.com/log4j2/log4j2-with-slf4j/ -->
-
-				<dependency>
-					<groupId>org.apache.logging.log4j</groupId>
-					<artifactId>log4j-api</artifactId>
-					<version>2.20.0</version>
-				</dependency>
-				<dependency>
-					<groupId>org.apache.logging.log4j</groupId>
-					<artifactId>log4j-core</artifactId>
-					<version>2.20.0</version>
-				</dependency>
-				<dependency>
-					<groupId>org.apache.logging.log4j</groupId>
-					<artifactId>log4j-slf4j-impl</artifactId>
-					<version>2.20.0</version>
-				</dependency>
-
-				<!-- https://mvnrepository.com/artifact/org.springframework.amqp/spring-rabbit-test -->
-				<dependency>
-					<groupId>org.springframework.amqp</groupId>
-					<artifactId>spring-rabbit-test</artifactId>
-					<version>3.0.8</version>
-					<scope>test</scope>
-				</dependency>
-
-				<dependency>
-					<groupId>junit</groupId>
-					<artifactId>junit</artifactId>
-					<scope>test</scope>
-				</dependency>
-
-				<dependency>
-					<groupId>org.springframework.boot</groupId>
-					<artifactId>spring-boot-starter-test</artifactId>
-					<scope>test</scope>
-				</dependency>
-			</dependencies>
-
-			<build>
-				<pluginManagement>
-					<plugins>
-						<plugin>
-							<groupId>org.apache.maven.plugins</groupId>
-							<artifactId>maven-compiler-plugin</artifactId>
-							<version>3.8.0</version>
-							<configuration>
-								<release>11</release>
-							</configuration>
-						</plugin>
-						<plugin>
-							<groupId>org.codehaus.mojo</groupId>
-							<artifactId>exec-maven-plugin</artifactId>
-							<executions>
-								<execution>
-									<goals>
-										<goal>java</goal>
-									</goals>
-								</execution>
-							</executions>
-							<!-- the configuration element must be OUTSIDE the element executions!! -->
-							<configuration>
-								<mainClass>
-									net.spikesync.pingerdaemonrabbitmqclient.PingerdaemonRabbitmqClientApplication
-								</mainClass>
-							</configuration>
-						</plugin>
-
-					</plugins>
-				</pluginManagement>
-			</build>
-		</project>
-	</profile>
-	<profile>
-		<id>no-parent</id>
-		<project xmlns="http://maven.apache.org/POM/4.0.0"
-			xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-			xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-			<modelVersion>4.0.0</modelVersion>
-
-			<!-- POM WITHOUT org.springframework.boot parent element! ONLY Spring 
-				Framework, NO Spring Boot!! In deze versie staat GEEN parent! In de andere 
-				versie is org.springframework.boot de parent, hier dus opzettelijk niet!! -->
-
-			<groupId>net.spikesync</groupId>
-			<artifactId>pingerdaemon-rabbitmq-client</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-			<name>pingerdaeomon-rabbitmq-client</name>
-			<description>VM SilverCloud pinger with RabbitMQ CLient</description>
-			<properties>
-				<java.version>17</java.version>
-				<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-			</properties>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+			<version>3.1.4</version>
+		</dependency>
 
 
-			<dependencies>
+		<!-- Add SLF4J logger https://www.baeldung.com/slf4j-with-log4j2-logback 
+	 See also: https://howtodoinjava.com/log4j2/log4j2-with-slf4j/ -->
 
-				<!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
-				<dependency>
-					<groupId>org.springframework</groupId>
-					<artifactId>spring-context</artifactId>
-					<version>6.0.11</version>
-					<exclusions>
-						<exclusion>
-							<groupId>commons-logging</groupId>
-							<artifactId>commons-logging</artifactId>
-						</exclusion>
-					</exclusions>
-				</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.20.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.20.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-slf4j-impl</artifactId>
+			<version>2.20.0</version>
+		</dependency>
 
+		<!--
+		https://mvnrepository.com/artifact/org.springframework.amqp/spring-rabbit-test -->
+		<dependency>
+			<groupId>org.springframework.amqp</groupId>
+			<artifactId>spring-rabbit-test</artifactId>
+			<version>3.0.8</version>
+			<scope>test</scope>
+		</dependency>
 
-				<!-- <dependency> <groupId>org.slf4j</groupId> <artifactId>jcl-over-slf4j</artifactId> 
-					<version>1.7.0</version> </dependency> -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
 
-				<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api THE NEWER 
-					VERSION of slf4j-api doesn't work as version 1.7.0 <dependency> <groupId>org.slf4j</groupId> 
-					<artifactId>slf4j-api</artifactId> <version>2.0.9</version> </dependency> -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.8.0</version>
+					<configuration>
+						<release>11</release>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>exec-maven-plugin</artifactId>
+					<executions>
+						<execution>
+							<goals>
+								<goal>java</goal>
+							</goals>
+						</execution>
+					</executions>
+					<!-- the configuration element must be OUTSIDE the element
+					executions!! -->
+					<configuration>
+						<mainClass>
+							net.spikesync.pingerdaemonrabbitmqclient.PingerdaemonRabbitmqClientApplication</mainClass>
+					</configuration>
+				</plugin>
 
-				<!-- -->
-				<dependency>
-					<groupId>org.slf4j</groupId>
-					<artifactId>slf4j-api</artifactId>
-					<!-- <version>1.7.0</version> -->
-					<version>1.7.0</version>
-				</dependency>
+			</plugins>
+		</pluginManagement>
+	</build>
 
-				<dependency>
-					<groupId>org.slf4j</groupId>
-					<artifactId>slf4j-log4j12</artifactId>
-					<version>1.7.0</version>
-				</dependency>
-
-				<dependency>
-					<groupId>log4j</groupId>
-					<artifactId>log4j</artifactId>
-					<version>1.2.14</version>
-				</dependency>
-
-
-				<!-- Hieronder staan TWEE dependencies die nodig zijn om een verbinding 
-					te maken met een RabbitMQ server Dit zijn andere dependencies dan in de POM 
-					met Spring-Boot!! -->
-				<dependency>
-					<groupId>com.rabbitmq</groupId>
-					<artifactId>amqp-client</artifactId>
-					<version>5.7.3</version>
-				</dependency>
-
-
-				<dependency>
-					<groupId>org.springframework.amqp</groupId>
-					<artifactId>spring-rabbit</artifactId>
-					<version>3.0.9</version>
-				</dependency>
-
-
-				<!-- https://mvnrepository.com/artifact/org.springframework.amqp/spring-rabbit-test -->
-				<dependency>
-					<groupId>org.springframework.amqp</groupId>
-					<artifactId>spring-rabbit-test</artifactId>
-					<version>3.0.8</version>
-					<scope>test</scope>
-				</dependency>
-
-				<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
-				<dependency>
-					<groupId>org.junit.jupiter</groupId>
-					<artifactId>junit-jupiter-api</artifactId>
-					<version>5.9.1</version>
-					<scope>test</scope>
-				</dependency>
-
-
-				<dependency>
-					<groupId>org.junit.vintage</groupId>
-					<artifactId>junit-vintage-engine</artifactId>
-					<version>5.9.1</version>
-					<scope>test</scope>
-				</dependency>
-
-
-				<dependency>
-					<groupId>org.junit.jupiter</groupId>
-					<artifactId>junit-jupiter-params</artifactId>
-					<version>5.9.1</version>
-					<scope>test</scope>
-				</dependency>
-
-			</dependencies>
-
-			<build>
-				<pluginManagement>
-					<plugins>
-						<plugin>
-							<groupId>org.apache.maven.plugins</groupId>
-							<artifactId>maven-compiler-plugin</artifactId>
-							<version>3.8.0</version>
-							<configuration>
-								<release>11</release>
-							</configuration>
-						</plugin>
-						<plugin>
-							<groupId>org.codehaus.mojo</groupId>
-							<artifactId>exec-maven-plugin</artifactId>
-							<executions>
-								<execution>
-									<goals>
-										<goal>java</goal>
-									</goals>
-								</execution>
-							</executions>
-							<!-- the configuration element must be OUTSIDE the element executions!! -->
-							<configuration>
-								<mainClass>
-									net.spikesync.pingerdaemonrabbitmqclient.PingerdaemonRabbitmqClientApplication
-								</mainClass>
-							</configuration>
-						</plugin>
-
-					</plugins>
-				</pluginManagement>
-			</build>
-
-		</project>
-	</profile>
-</profiles>
+</project>
