--- a/pom.xml
+++ b/pom.xml
@@ -117,7 +117,7 @@
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.8.0</version>
 					<configuration>
-						<release>11</release>
+						<release>17</release>
 					</configuration>
 				</plugin>
 				<plugin>
@@ -125,6 +125,8 @@
 					<artifactId>exec-maven-plugin</artifactId>
 					<executions>
 						<execution>
+							<id>compile</id>
+							<phase>compile</phase>
 							<goals>
 								<goal>java</goal>
 							</goals>
