--- a/pom.xml
+++ b/pom.xml
@@ -8,15 +8,17 @@ INCLUDED!! -->
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.1.4</version>
+		<version>3.1.5</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
+
 	<groupId>net.spikesync</groupId>
 	<artifactId>pingerdaemon-rabbitmq-client</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>pingerdaeomon-rabbitmq-client</name>
 	<description>VM SilverCloud pinger with RabbitMQ CLient</description>
 	<properties>
+		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
@@ -41,19 +43,16 @@ INCLUDED!! -->
 		<dependency>
 			<groupId>com.rabbitmq</groupId>
 			<artifactId>amqp-client</artifactId>
-			<version>5.17.1</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.amqp</groupId>
 			<artifactId>spring-rabbit</artifactId>
-			<version>3.0.9</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-amqp</artifactId>
-			<version>3.1.4</version>
 		</dependency>
 
 
@@ -85,7 +84,6 @@ INCLUDED!! -->
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
-			<version>1.4.11</version>
 		</dependency>
 
 
@@ -94,7 +92,6 @@ INCLUDED!! -->
 		<dependency>
 			<groupId>org.springframework.amqp</groupId>
 			<artifactId>spring-rabbit-test</artifactId>
-			<version>3.0.8</version>
 			<scope>test</scope>
 		</dependency>
 
