Changed elements <artifactId/> and <name/> in the POM to pingheatmap-rest-service. Continued debugging JUnit5 and Spring testing

--- a/src/main/resources/nospringboot.application.properties
+++ b/src/main/resources/nospringboot.application.properties
@@ -1,12 +1,7 @@
 #spring.main.web-application-type=NONE
-#logging.level.org.springframework.boot.autoconfigure=INFO
 #spring.main.lazy-initialization=FALSE
 #Test for the existence of the SilverCloud bean in the top-class DevPingApplication through Autowiring.
+ordinary.property.test=TRUE
 test-pingerdaemon-context=TRUE
-logging.level.root=DEBUG
-logging.level.org.springframework=DEBUG
-logging.level.org.springframework.context=DEBUG
-loggin.level.net.spikesync=DEBUG
-fileName=logback.xml
-
-
+leesdit=ALTIJD
+nospringboot.application.properties=TRUE
